[package]
name = "codenames-imgager"
version = "0.1.0"
authors = ["Euan Kemp <euank@euank.com>"]
edition = "2018"

[dependencies]
bytes = "1.0.1"
image = "0.23.13"
imageproc = "0.22.0"
include-repo = "0.1.0"
rusttype = "0.9.2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "0.8.2", features = ["v4"] }
warp = "0.3"
